Remove links and views

--- a/COMP2006-S2016-FinalExamV2/Views/Artists/Index.cshtml
+++ b/COMP2006-S2016-FinalExamV2/Views/Artists/Index.cshtml
@@ -1,31 +1,22 @@
 ﻿@model IEnumerable<COMP2006_S2016_FinalExamV2.Models.Artist>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Artist List";
 }
 
-<h2>Index</h2>
+<h2>Artist List</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
-        <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ArtistId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ArtistId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ArtistId })
         </td>
     </tr>
 }
