--- a/COMP2006-S2016-FinalExamV2/Views/Genres/Index.cshtml
+++ b/COMP2006-S2016-FinalExamV2/Views/Genres/Index.cshtml
@@ -1,14 +1,11 @@
 ﻿@model IEnumerable<COMP2006_S2016_FinalExamV2.Models.Genre>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Genres List";
 }
 
-<h2>Index</h2>
+<h2>Genres List</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
@@ -17,7 +14,6 @@
         <th>
             @Html.DisplayNameFor(model => model.Description)
         </th>
-        <th></th>
     </tr>
 
 @foreach (var item in Model) {
@@ -27,11 +23,6 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.GenreId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.GenreId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.GenreId })
         </td>
     </tr>
 }
