--- a/COMP2006-S2016-FinalExamV2/Views/Albums/Index.cshtml
+++ b/COMP2006-S2016-FinalExamV2/Views/Albums/Index.cshtml
@@ -1,14 +1,11 @@
 ﻿@model IEnumerable<COMP2006_S2016_FinalExamV2.Models.Album>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Album List";
 }
 
-<h2>Index</h2>
+<h2>Album List</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
@@ -26,7 +23,6 @@
         <th>
             @Html.DisplayNameFor(model => model.AlbumArtUrl)
         </th>
-        <th></th>
     </tr>
 
 @foreach (var item in Model) {
@@ -45,11 +41,6 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.AlbumArtUrl)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.AlbumId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.AlbumId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.AlbumId })
         </td>
     </tr>
 }
