--- a/COMP2006-S2016-FinalExamV2/Views/Albums/Index.cshtml
+++ b/COMP2006-S2016-FinalExamV2/Views/Albums/Index.cshtml
@@ -3,7 +3,13 @@
 @{
     ViewBag.Title = "Album List";
 }
-
+@*
+     * Authors:  Ritesh Patel
+     * Srudent ID : 200307232
+     * Date : Aug 18 2016
+     * Name: Albums List view
+     * Description: This view provides list of albums.
+*@
 <h2>Album List</h2>
 
 <table class="table">
