--- a/COMP2006-S2016-FinalExamV2/Views/Artists/Index.cshtml
+++ b/COMP2006-S2016-FinalExamV2/Views/Artists/Index.cshtml
@@ -3,7 +3,13 @@
 @{
     ViewBag.Title = "Artist List";
 }
-
+@*
+    * Authors:  Ritesh Patel
+    * Srudent ID : 200307232
+    * Date : Aug 18 2016
+    * Name: Artists List view
+    * Description: This view provides list of artists.
+*@
 <h2>Artist List</h2>
 
 <table class="table">
