--- a/COMP2006-S2016-FinalExamV2/Views/Home/About.cshtml
+++ b/COMP2006-S2016-FinalExamV2/Views/Home/About.cshtml
@@ -1,6 +1,13 @@
 ﻿@{
     ViewBag.Title = "About ";
 }
+@*
+    * Authors:  Ritesh Patel
+    * Srudent ID : 200307232
+    * Date : Aug 18 2016
+    * Name: About view
+    * Description: This view provides information about me.
+*@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
