--- a/COMP2006-S2016-FinalExamV2/Views/Home/Contact.cshtml
+++ b/COMP2006-S2016-FinalExamV2/Views/Home/Contact.cshtml
@@ -3,7 +3,13 @@
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
-
+@*
+    * Authors:  Ritesh Patel
+    * Srudent ID : 200307232
+    * Date : Aug 18 2016
+    * Name: Contact view
+    * Description: This view provides information of contact.
+*@
 <address>
     One Microsoft Way<br />
     Redmond, WA 98052-6399<br />
