--- a/COMP2006-S2016-FinalExamV2/Views/Home/Index.cshtml
+++ b/COMP2006-S2016-FinalExamV2/Views/Home/Index.cshtml
@@ -1,7 +1,13 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-
+@*
+    * Authors:  Ritesh Patel
+    * Srudent ID : 200307232
+    * Date : Aug 18 2016
+    * Name: home page view
+    * Description: This is home page.
+*@
 <div class="jumbotron">
     <h1>ASP.NET</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
