--- a/COMP2006-S2016-FinalExamV2/Views/Shared/_Layout.cshtml
+++ b/COMP2006-S2016-FinalExamV2/Views/Shared/_Layout.cshtml
@@ -23,9 +23,9 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Genres", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Albums", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Artists", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Genres", "Index", "Genres")</li>
+                    <li>@Html.ActionLink("Albums", "Index", "Albums")</li>
+                    <li>@Html.ActionLink("Artists", "Index", "Artists")</li>
                 </ul>
             </div>
         </div>
